# tomboy-web

./: .firebaserc  .gitignore  CLAUDE.md  firestore.indexes.json  firestore.rules  firestore.rules.shared  package-lock.json
.claude/skills/tomboy-admin/: SKILL.md
.claude/skills/tomboy-autolink/: SKILL.md
.claude/skills/tomboy-backlinkindex/: SKILL.md
.claude/skills/tomboy-bridgedash/: SKILL.md
.claude/skills/tomboy-dataautomation/: SKILL.md
.claude/skills/tomboy-diary/: SKILL.md
.claude/skills/tomboy-drawers/: SKILL.md
.claude/skills/tomboy-geomap/: SKILL.md
.claude/skills/tomboy-graph/: SKILL.md
.claude/skills/tomboy-hrsplit/: SKILL.md
.claude/skills/tomboy-hue/: SKILL.md
.claude/skills/tomboy-imagecache/: SKILL.md
.claude/skills/tomboy-musicextract/: SKILL.md
.claude/skills/tomboy-musicplayer/: SKILL.md
.claude/skills/tomboy-notebundle/: SKILL.md
.claude/skills/tomboy-notesync/: SKILL.md
.claude/skills/tomboy-ocr-note/: SKILL.md
.claude/skills/tomboy-remarkable-send/: SKILL.md
.claude/skills/tomboy-schedule/: SKILL.md
app/: .env.example  .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.ts
app/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
app/scripts/: prefetch-fonts.mjs  sync-codegraph.mjs
app/src/: app.css  app.html  service-worker.ts
app/src/stores/: notes.ts
app/static/: manifest.webmanifest
app/tests/: setup.ts
automation-service/: package-lock.json  package.json
automation-service/deploy/: README.md  automation-service.service
automation-service/src/: auth.ts  registry.ts  runner.ts  server.ts
automation-service/tests/: registry.test.ts  runner.test.ts  server.test.ts
bridge/: .env.example  Containerfile  README.md  package-lock.json  package.json  tsconfig.json
bridge/deploy/: Caddyfile  term-bridge.container  tomboy-spectator.tmux
bridge/scripts/: deploy.mjs
bridge/src/: auth.ts  automation.test.ts  automation.ts  claude.test.ts  claude.ts  files.test.ts  files.ts  gpu.test.ts  gpu.ts  hosts.ts  hue.test.ts  hue.ts  hueCreds.test.ts  hueCreds.ts  imageTransfer.test.ts  imageTransfer.ts  keyEvents.test.ts  keyEvents.ts  llm.ts  music.test.ts  music.ts  noteMarkdown.test.ts  noteMarkdown.ts  notes.test.ts  notes.ts  notesMcp.test.ts  notesMcp.ts  notesStore.test.ts  notesStore.ts  ocr.test.ts  ocr.ts  pty.test.ts  pty.ts  rag.ts  remarkable.test.ts  remarkable.ts  remarkableFolders.test.ts  remarkableFolders.ts  remarkableHosts.test.ts  remarkableHosts.ts  (+22 more)
claude-service/: Containerfile  package-lock.json  package.json  tsconfig.json
claude-service/deploy/: README.md  claude-service.container
claude-service/src/: auth.ts  imageInline.ts  runner.ts  server.ts
claude-service/tests/: _fakes.ts  imageInline.test.ts  runner.test.ts  server.test.ts
docs/: new_implements_spec.md  plan-ux-improvements.md  tmux-note-integration.md  tmux-spectator-scroll-analysis.md  tmux-spectator-scroll-follow-feasibility.md  tmux-spectator-scrollback-client-feasibility.md
docs/impl/: 01-empty-stub-fix.md  02-app-settings-store.md  03-note-action-sheet.md  04-scroll-restoration.md  05-notebooks.md  06-per-note-category.md  07-favorite-and-home.md  08-tab-navigation.md  09a-sync-plan-preview.md  09b-sync-plan-selection.md  10-global-navigation.md  11-progress-new-spec.md  README.md
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts  summary.ts
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
music-service/: package-lock.json  package.json
music-service/deploy/: README.md  music-service.service
music-service/src/: auth.ts  bridgeToken.ts  runner.ts  server.ts  validate.ts
music-service/tests/: bridgeToken.test.ts  runner.test.ts  server.test.ts  validate.test.ts
ocr-service/: Containerfile  pyproject.toml
ocr-service/deploy/: README.md  ocr-service.container
ocr-service/src/ocr_service/: app.py  config.py  gpu.py  idle.py  model.py  model_real.py
ocr-service/tests/: _fakes.py  conftest.py  test_app.py  test_gpu.py  test_model.py
pipeline/: .gitignore  FIRST_RUN.md  README.md  conftest.py  pyproject.toml
pipeline/config/: pipeline.example.yaml
pipeline/config/prompts/: diary-ko.txt
pipeline/desktop/: bootstrap.py  run_pipeline.py  trigger_server.py
pipeline/desktop/deploy/: desktop-pipeline.service  desktop-pipeline.timer  diary-trigger.service  rag-indexer.service  rag-search.service
pipeline/desktop/lib/: config.py  dropbox_uploader.py  firestore_client.py  keys.py  log.py  pipeline_status.py  raster.py  state.py  tomboy_payload.py
pipeline/desktop/ocr_backends/: __init__.py  base.py  claude.py  local_vlm.py
pipeline/desktop/rag/: __init__.py  embeddings.py  firestore_source.py  indexer.py  note_parser.py  search_server.py  vector_store.py  zip_bootstrap.py
pipeline/desktop/stages/: s1_fetch.py  s2_prepare.py  s3_ocr.py  s4_write.py
pipeline/desktop/tools/: extract_corrections.py  segment_lines.py
pipeline/pi/: README.md  inbox_watcher.py
pipeline/pi/deploy/: pi-watcher.service  pi-watcher.timer
pipeline/tests/: test_bootstrap.py  test_extract_corrections.py  test_run_pipeline.py  test_scaffold.py  test_segment_lines.py  test_trigger_server.py  test_trigger_server_config.py
pipeline/tests/fixtures/: sample-metadata.json
pipeline/tests/lib/: test_config.py  test_dropbox_uploader.py  test_firestore_client.py  test_keys.py  test_log.py  test_pipeline_status.py  test_raster.py  test_state.py  test_tomboy_payload.py
pipeline/tests/ocr_backends/: test_base.py  test_claude.py  test_local_vlm.py
pipeline/tests/pi/: test_inbox_watcher.py
pipeline/tests/rag/: __init__.py  test_embeddings.py  test_firestore_source.py  test_indexer.py  test_note_parser.py  test_search_server.py  test_vector_store.py  test_zip_bootstrap.py
pipeline/tests/stages/: test_s1_fetch.py  test_s2_prepare.py  test_s3_ocr.py  test_s3_ocr_dispatch.py  test_s4_write.py
scripts/: sync-worktrees.sh  worktree-status.sh
(+1143 files in other folders)
