[project]
name = "ocr-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pillow>=10.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
model = [
    # torch/torchvision: 최신 2.12+ 의 `_dynamo.polyfills.sys` 가 컨테이너의
    # python3.11에 없는 `sys.get_int_max_str_digits` 를 import 시점에 참조해
    # 깨짐. GOT-OCR2 가 검증된 torch 2.4 LTS 라인으로 핀.
    "torch>=2.3,<2.5",
    "torchvision>=0.18,<0.20",
    "transformers>=4.45,<4.50",
    "accelerate>=0.33",
    "verovio>=4.3",
    # GOT-OCR2 의 tokenizer가 trust_remote_code 로 동적 import 함.
    # transformers 가 자동으로 안 끌어와서 [model] extras 에 명시.
    "tiktoken>=0.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
