[project]
name = "ocr-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pillow>=10.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
model = [
    # torch/torchvision: 최신 2.12+ 의 `_dynamo.polyfills.sys` 가 컨테이너의
    # python3.11에 없는 `sys.get_int_max_str_digits` 를 import 시점에 참조해
    # 깨짐. 2.4 LTS 라인이 안전. (Ubuntu 22.04 base image 의 한계라 model 변경
    # 과 무관.)
    "torch>=2.4,<2.5",
    "torchvision>=0.19,<0.20",
    # GOT-OCR-2.0-hf 는 transformers 4.49 에 정식 통합. 그 이후 버전들은
    # `transformers/integrations/moe.py` 가 torch 2.5+ API (`custom_op`
    # type annotation 신문법) 를 요구해서 torch 2.4 LTS 와 깨짐.
    # 4.49 시리즈로 좁게 핀해서 MoE 이전 + 모델 native 지원 둘 다 확보.
    # 향후 base image를 Ubuntu 24.04 + Python 3.12로 교체하면 torch 2.5+
    # 와 함께 이 캡 풀 수 있음.
    "transformers>=4.49,<4.50",
    # low_cpu_mem_usage=True / device_map="auto" 가 accelerate 를 요구함.
    # 1.0 의 API 재작성을 피해 <1.0 으로 캡.
    "accelerate>=0.33,<1.0",
    # safetensors: from_pretrained(use_safetensors=True) 의 명시적 dep.
    # 보통 transformers 가 끌어오지만 resolver 변동 방어용.
    "safetensors>=0.4",
    # requests: HF native 모델의 image_processor 가 URL/path 로딩에 사용.
    # huggingface_hub 가 transitively 끌어오긴 하지만 명시.
    "requests>=2.31",
    "pillow>=10.4,<12",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
